Separated instructions for local and DSX run in the readme and added comments to notebook.

--- a/notebooks/Clickstream_Analytics_using_Apache_Spark_and_Message_Hub.ipynb
+++ b/notebooks/Clickstream_Analytics_using_Apache_Spark_and_Message_Hub.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clickstream Analysis using Apache Spark and Apache Kafka(or Message hub).\n",
+    "\n",
+    "[Message Hub: Apache Kafka as a Service](https://developer.ibm.com/messaging/2016/03/14/message-hub-apache-kafka-as-a-service/), is well integrated into the IBM Data Science Experience.\n",
+    "\n",
+    "\n",
+    "Before running the notebook, you will need to setup a [Message hub](https://developer.ibm.com/messaging/message-hub/) service. \n",
+    "\n",
+    "**Note:** Message hub is a paid service.\n",
+    "\n",
+    "* For creating a Message hub service, go to `Data services-> Services` tab on the dashboard. Select the option to create a message hub service following the on screen instructions. Post creating service instance, select it and create a topic `clicks` with all defaults or as per your preference.\n",
+    "\n",
+    "* Once the service is running, it has to be added to the current notebook. For this, first we need to create a connection for this message hub service instance. Go to `Data services-> connections` tab on dashboard and create new connection filling in the details and referring to the above created service instance in the Service instance section and then select topic `clicks`. Once done, go to `Assets` tab on the project dashboard and then click `+New data asset`. Then locate the created message hub service connection under the connections tab and click `Apply`.\n",
+    "\n",
+    "* Once the service is added to the notebook, credentials to access it can be auto inserted. Please follow comments in the next step, for instructions on how to insert credentials. Once the credentials are inserted it is ready for execution.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Credentials Section. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,8 +53,12 @@
     }
    ],
    "source": [
-    " // @hidden_cell\n // In a Project create a Connection to a Message Hub topic and then in a Notebook in the Project use 'Insert to Code' to get the connection info pasted into the code cell.\n // Just like this: \n",
-    "var credentials_1 = scala.collection.mutable.HashMap[String, String](\n",
+    " // In a Project create a Connection to a Message Hub topic and then in a Notebook in the Project use 'Insert to Code'\n",
+    "// to get the connection info pasted into the code cell. And rename it to credentials_1.\n",
+    "\n",
+    " // Just like this: \n",
+    "// @hidden_cell\n",
+    "/*var credentials_1 = scala.collection.mutable.HashMap[String, String](\n",
     "  \"instance_id\"->\"***\",\n",
     "  \"mqlight_lookup_url\"->\"***\",\n",
     "  \"api_key\"->\"***\",\n",
@@ -37,8 +68,18 @@
     "  \"user\"->\"***\",\n",
     "  \"password\"->\"\"\"****\"\"\",\n",
     "  \"topic\"->\"test\"\n",
-    ")\n",
+    ")*/\n",
+    "// @hidden_cell\n",
+    "\n",
+    "\n",
     "spark.version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Specify the schema of the incoming wikipedia clickstream and the parse method:"
    ]
   },
   {
@@ -82,74 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "val user = credentials_1(\"user\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***\n"
-     ]
-    }
-   ],
-   "source": [
-    "println(user)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "val pass = credentials_1(\"password\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***\n"
-     ]
-    }
-   ],
-   "source": [
-    "println(pass)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    " val saslConfig =\n",
+    "val user = credentials_1(\"user\")\n",
+    "val pass = credentials_1(\"password\")\n",
+    "val topic = credentials_1(\"topic\")\n",
+    "val saslConfig =\n",
     "    s\"\"\"org.apache.kafka.common.security.plain.PlainLoginModule required\n",
     "      |debug=true\n",
     "      |username=\"$user\"\n",
@@ -157,39 +140,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "org.apache.kafka.common.security.plain.PlainLoginModule required\n",
-      "debug=true\n",
-      "username=\"***\"\n",
-      "password=\"***\";\n"
-     ]
-    }
-   ],
    "source": [
-    "println(saslConfig)"
+    "Setup structured streaming to read from Kafka:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "val records = spark.readStream.format(\"kafka\").option(\"kafka.sasl.jaas.config\", saslConfig).option(\"subscribe\", \"test\").option(\"kafka.sasl.mechanism\", \"PLAIN\").option(\"kafka.security.protocol\", \"SASL_SSL\").option(\"failOnDataLoss\", \"false\").option(\"kafka.bootstrap.servers\", credentials_1(\"kafka_brokers_sasl\")).load()\n"
+    "val records = spark.readStream.format(\"kafka\").option(\"kafka.sasl.jaas.config\", saslConfig).option(\"subscribe\", topic).option(\"kafka.sasl.mechanism\", \"PLAIN\").option(\"kafka.security.protocol\", \"SASL_SSL\").option(\"failOnDataLoss\", \"false\").option(\"kafka.bootstrap.servers\", credentials_1(\"kafka_brokers_sasl\")).load()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Process the records:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,6 +174,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Output to the console and start streaming:"
+   ]
+  },
+{
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
